refactor(Service): rename services provided by veterinary to offering